--- a/StewardClient/package.json
+++ b/StewardClient/package.json
@@ -84,6 +84,7 @@
     "@types/json-bigint": "^1.0.1",
     "@types/signalr": "^2.2.37",
     "angular-calendar": "^0.29.0",
+    "angular-shepherd": "^15.0.0",
     "bignumber.js": "^9.0.2",
     "core-js": "^3.20.2",
     "eslint-plugin-rxjs": "^4.0.4",
