--- a/StewardApi/StewardApi.csproj
+++ b/StewardApi/StewardApi.csproj
@@ -124,7 +124,7 @@
     <PackageReference Include="Turn10.Services.ForzaClient.FM7" Version="2.13.5">
       <NoWarn>NU1701</NoWarn>
     </PackageReference>
-    <PackageReference Include="Turn10.Services.ForzaClient.FM8" Version="2.15.5">
+    <PackageReference Include="Turn10.Services.ForzaClient.FM8" Version="2.16.0-CI-74943">
       <NoWarn>NU1701</NoWarn>
     </PackageReference>
     <PackageReference Include="Turn10.Services.ForzaClient.FMG" Version="1.0.4">
