--- a/infra/azure-pipelines/dotnet-core/nuget/job-nuget-publish-prerelease.template.yml
+++ b/infra/azure-pipelines/dotnet-core/nuget/job-nuget-publish-prerelease.template.yml
@@ -33,12 +33,12 @@ jobs:
       configuration: $(BuildConfiguration)
       packagesToPack: '${{parameters.workingDirectory}}/**/*.Package.csproj'
       versioningScheme: byPrereleaseNumber
-      packDestination: '$(Build.ArtifactStagingDirectory)/nuget'
+      packDestination: '$(Build.ArtifactStagingDirectory)/'
 
   - task: PublishBuildArtifacts@1
     displayName: 'Publish Artifact: nuget'
     inputs:
-      PathtoPublish: '$(Build.ArtifactStagingDirectory)/nuget/*'
+      PathtoPublish: '$(Build.ArtifactStagingDirectory)/*.nupkg'
       ArtifactName: ${{parameters.nugetName}}
 
   # Publish
@@ -47,5 +47,5 @@ jobs:
     inputs:
       command: 'push'
       nuGetFeedType: 'internal'
-      packagesToPush: '$(build.artifactStagingDirectory)/nuget/$(ProjectName)*.nupkg'
+      packagesToPush: '$(build.artifactStagingDirectory)/$(ProjectName)*.nupkg'
       publishVstsFeed: 'Turn10-LiveOps'
