--- a/infra/azure-pipelines/dotnet-core/nuget/job-nuget-publish-prerelease.template.yml
+++ b/infra/azure-pipelines/dotnet-core/nuget/job-nuget-publish-prerelease.template.yml
@@ -36,16 +36,16 @@ jobs:
       packDestination: '$(Build.ArtifactStagingDirectory)/'
 
   - task: PublishBuildArtifacts@1
-    displayName: 'Publish Artifact: nuget'
+    displayName: 'Publish artifact folder'
     inputs:
       PathtoPublish: '$(Build.ArtifactStagingDirectory)'
       ArtifactName: ${{parameters.nugetName}}
 
   # Publish
   - task: DotNetCoreCLI@2
-    displayName: 'Publish to feed'
+    displayName: 'Push nuget to feed'
     inputs:
       command: 'push'
       nuGetFeedType: 'internal'
-      packagesToPush: '$(build.artifactStagingDirectory)/$(ProjectName)*.nupkg'
+      packagesToPush: '$(build.artifactStagingDirectory)/${{params.nugetName}}*.nupkg'
       publishVstsFeed: 'Turn10-LiveOps'
