--- a/infra/azure-pipelines/dotnet-core/nuget/job-nuget-publish-prerelease.template.yml
+++ b/infra/azure-pipelines/dotnet-core/nuget/job-nuget-publish-prerelease.template.yml
@@ -49,4 +49,4 @@ jobs:
     inputs:
       command: 'push'
       packagesToPush: '$(build.artifactStagingDirectory)/${{parameters.nugetName}}*.nupkg'
-      publishVstsFeed: 'turn10/Turn10-LiveOps'
+      publishVstsFeed: 'Turn10-LiveOps'
