--- a/packages/Analyzer-Documentation/Analyzer_Documentation.Package/Analyzer_Documentation.Package.csproj
+++ b/packages/Analyzer-Documentation/Analyzer_Documentation.Package/Analyzer_Documentation.Package.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <PackageId>Analyzer_Documentation</PackageId>
+    <PackageId>Turn10.Analyzer.Documentation</PackageId>
 
     <!-- https://andrewlock.net/version-vs-versionsuffix-vs-packageversion-what-do-they-all-mean/ -->
     <Version>1.1.0</Version>
@@ -23,10 +23,10 @@
     <RepositoryUrl>http://REPOSITORY_URL_HERE_OR_DELETE_THIS_LINE</RepositoryUrl> -->
 
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
-    <Description>Analyzer_Documentation</Description>
+    <Description>A custom analyzer for documentation presence.</Description>
     <PackageReleaseNotes>Summary of changes made in this release of the package.</PackageReleaseNotes>
     <Copyright>Copyright</Copyright>
-    <PackageTags>Analyzer_Documentation, analyzers</PackageTags>
+    <PackageTags>Turn10.Analyzer.Documentation, analyzers</PackageTags>
     <DevelopmentDependency>true</DevelopmentDependency>
     <NoPackageAnalysis>true</NoPackageAnalysis>
 
