--- a/infra/azure-pipelines/dotnet-core/nuget/job-nuget-publish-prerelease.template.yml
+++ b/infra/azure-pipelines/dotnet-core/nuget/job-nuget-publish-prerelease.template.yml
@@ -22,6 +22,15 @@ jobs:
   - template: ../prepare-nuget-project.template.yml
     parameters:
       workingDirectory: ${{parameters.workingDirectory}}
+      
+  - bash: |
+      MAJOR=$(grep -iPo "(?<=<version>).*?(?=\.)" **/*.Package.csproj)
+      MINOR=$(grep -iPo "<version>.*?\.\K.*?(?=\.)" **/*.Package.csproj)
+      PATCH=$(grep -iPo "<version>.*?\..*?\.\K.*?(?=<)" **/*.Package.csproj)
+      echo "##vso[task.setvariable variable=majorVersion]$MAJOR"
+      echo "##vso[task.setvariable variable=minorVersion]$MINOR"
+      echo "##vso[task.setvariable variable=patchVersion]$PATCH"
+    displayName: Retrieve Version from .csproj
 
   - task: DotNetCoreCLI@2
     displayName: Build
@@ -39,7 +48,11 @@ jobs:
       configuration: $(BuildConfiguration)
       packagesToPack: '${{parameters.workingDirectory}}/**/*.Package.csproj'
       versioningScheme: byPrereleaseNumber
+      major: $(majorVersion)
+      minor: $(minorVersion)
+      patch: $(patchVersion)
       packDestination: '$(Build.ArtifactStagingDirectory)/'
+      includeSymbols: true
 
   - task: PublishBuildArtifacts@1
     displayName: 'Publish artifact folder'
@@ -56,6 +69,3 @@ jobs:
       command: 'push'
       packagesToPush: '$(build.artifactStagingDirectory)/${{parameters.nugetName}}*.nupkg'
       publishVstsFeed: 'Turn10-LiveOps'
-      # major: 1
-      # minor: 1
-      # patch: $[counter(format('{0}.{1}', variables['Major'], variables['Minor']), 0)]
